k8s/tcp/ssl-mengxin-ml-keyless-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: ssl-mengxin-ml-keyless-clusterip
  namespace: tcp
spec:
  selector:
    pod: ssl-mengxin-ml
  type: ClusterIP
  ports:
    - name: keyless
      port: 2407
      targetPort: 2407
