k8s/tcp/tcp-voyager-ingress-service.yaml
apiVersion: voyager.appscode.com/v1beta1
kind: Ingress
metadata:
  name: tcp-vogayer-ingress-service
  namespace: tcp
  annotations:
    ingress.appscode.com/load-balancer-ip: "35.240.167.250"
spec:
  rules:
    # mengxin-sea1-test-vm-instance-1 ssh traffic
    - tcp:
        port: "2001"
        backend:
          serviceName: mengxin-sea1-test-vm-instance-1
          servicePort: "22"
    # mengxin-sea1-test-vm-instance-1 docker tls remote host traffic
    - tcp:
        port: "2376"
        backend:
          serviceName: mengxin-sea1-test-vm-instance-1
          servicePort: "2376"
    # mengxin-sea1-test-vm-instance-2 ssh traffic
    - tcp:
        port: "2002"
        backend:
          serviceName: mengxin-sea1-test-vm-instance-2
          servicePort: "22"
    # mengxin-sea1-test-vm-instance-3 rdp traffic
    - tcp:
        port: "2003"
        backend:
          serviceName: mengxin-sea1-test-vm-instance-3
          servicePort: "3389"
    # mengxin-gns3-vm-instance-1 ssh traffic
    - tcp:
        port: "2004"
        backend:
          serviceName: mengxin-gns3-vm-instance-1
          servicePort: "22"
    # ssl.mengxin.ml.keyless ssl traffic (dev)
    - tcp:
        port: "2407"
        backend:
          serviceName: ssl-mengxin-ml-keyless-clusterip
          servicePort: "2407"
